tests/paczka1/fuzzy1/55685522.err
Error in line 3: S755 A872 84,5
Error in line 5: jA3Lc A4! 20,0
Error in line 4: S755 S755 19,1
Error in line 7: S755 A706 65,0
Error in line 6: jA3Lc S755 5,9
Error in line 12: jA3Lc A706 14,9
Error in line 14: YMbQs A872 65,7
Error in line 24: YMbQs A46 34,3
Error in line 23: jA3Lc A46 60,2
Error in line 30: S755 A872 25,5
